[project]
name = "md-images"
version = "0.4.0"
description = "List images linked in a markdown file"
authors = [
    { name = "Thorsten Vitt", email = "thorsten.vitt@uni-wuerzburg.de" },
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "panflute<3.0.0,>=2.0.5",
]

[project.scripts]
md-images = "md_images:_main"

[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.3",
]

[tool.pdm.build]
includes = [
    "md_images.py",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"
