[project]
name = "md-images"
version = "0.5.0"
description = "List images linked in a markdown file"
authors = [{ name = "Thorsten Vitt", email = "thorsten.vitt@uni-wuerzburg.de" }]
requires-python = ">=3.9,<4.0"
dependencies = ["panflute<3.0.0,>=2.0.5", "cyclopts>=2.9.9"]

[project.scripts]
md-images = "md_images.oldcli:_main"
prefer-variants = "md_images.prefer_variants:app"

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.3.3"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
